tests/NormalTests/paczka1/small_fuzzy/49930764.err
Error in line 1: QP0LogW S11 19,1
Error in line 8: Q"0LogW S845 2,4
Error in line 4: QP0LogW S845 26,6
